--- a/GrooveClient/LB.Controls/LB.Controls.csproj
+++ b/GrooveClient/LB.Controls/LB.Controls.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Controls\Helper\LBEnum.cs" />
     <Compile Include="Controls\Helper\LBShowForm.cs" />
     <Compile Include="Controls\ILBTextBox.cs" />
+    <Compile Include="Controls\IPAddressTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\IPAddressTextBox.Designer.cs">
+      <DependentUpon>IPAddressTextBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\LBBillForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -231,6 +237,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Controls\CtlFieldHeaderPanel.resx">
       <DependentUpon>CtlFieldHeaderPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\IPAddressTextBox.resx">
+      <DependentUpon>IPAddressTextBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\LBBillForm.resx">
       <DependentUpon>LBBillForm.cs</DependentUpon>
