--- a/GrooveServer/LB.Web.ServerTemp/LB.Web.ServerTool.csproj
+++ b/GrooveServer/LB.Web.ServerTemp/LB.Web.ServerTool.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmDisk.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDisk.Designer.cs">
+      <DependentUpon>frmDisk.cs</DependentUpon>
+    </Compile>
     <Compile Include="HardDiskVal.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -66,6 +72,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDisk.resx">
+      <DependentUpon>frmDisk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -88,6 +97,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LB.Web.Encrypt\LB.Web.Encrypt.csproj">
+      <Project>{cdf00a86-5bfa-4b80-aa97-fb96ad59fde8}</Project>
+      <Name>LB.Web.Encrypt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LB.Web.Remoting\LB.Web.Remoting.csproj">
       <Project>{d773829b-9401-4b36-bfc5-bf2d3e6b40dd}</Project>
       <Name>LB.Web.Remoting</Name>
