--- a/GrooveServer/LB.Web.Encrypt/LB.Web.Encrypt.csproj
+++ b/GrooveServer/LB.Web.Encrypt/LB.Web.Encrypt.csproj
@@ -32,7 +32,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HardDiskVal.cs" />
     <Compile Include="IniClass.cs" />
     <Compile Include="LBEncrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
