--- a/GrooveServer/LB.Web.ServerTemp/LB.Web.ServerTool.csproj
+++ b/GrooveServer/LB.Web.ServerTemp/LB.Web.ServerTool.csproj
@@ -11,10 +11,14 @@
     <AssemblyName>LB.Web.ServerTool</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,7 +64,6 @@
     <Compile Include="frmDisk.Designer.cs">
       <DependentUpon>frmDisk.cs</DependentUpon>
     </Compile>
-    <Compile Include="HardDiskVal.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
