--- a/GrooveServer/LB.Web.Encrypt/LB.Web.Encrypt.csproj
+++ b/GrooveServer/LB.Web.Encrypt/LB.Web.Encrypt.csproj
@@ -30,9 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\LB.Web.ServiceMonitor\bin\Debug\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HardDiskVal.cs" />
     <Compile Include="IniClass.cs" />
     <Compile Include="LBEncrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
