--- a/GrooveClient/LB.ReadCard/LB.ReadCard.csproj
+++ b/GrooveClient/LB.ReadCard/LB.ReadCard.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\LB.MainForm\bin\Debug\CardMain\</OutputPath>
+    <OutputPath>..\LB.MainForm\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
